force-app/main/default/objects/Bot_Forms__c/Bot_Forms__c.object-meta.xml
<CustomObject>
    <label>Bot Forms</label>
    <nameField>
        <displayFormat>FO-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bot Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>