force-app/main/default/objects/Bot_Forms__c/fields/Department_ID__c.field-meta.xml
<CustomField>
    <fullName>Department_ID__c</fullName>
    <label>Department ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>