force-app/main/default/objects/Bot_Forms__c/fields/Division_ID__c.field-meta.xml
<CustomField>
    <fullName>Division_ID__c</fullName>
    <label>Division ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>